permissions narrowed to "tabs", "http://www.google.com/reader/*"

--- a/ChromeReader/ChromeReader/manifest.json
+++ b/ChromeReader/ChromeReader/manifest.json
@@ -10,10 +10,7 @@
 	
 	"content_scripts":
 	[
-		{
-			"matches": [ "http://*/*" ],
-			"js": [ "feed_finder.js" ]
-		}
+		{ "matches": [ "http://*/*" ], "js": [ "feed_finder.js" ] }
 	],
 	
 	"page_action":
@@ -22,5 +19,5 @@
 		"type": "tab"
 	},
 	
-	"permissions": [ "tabs", "http://*/*" ]
+	"permissions": [ "tabs", "http://www.google.com/reader/*" ]
 }
