--- a/ChromeReader/ChromeReader/manifest.json
+++ b/ChromeReader/ChromeReader/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Chrome Reader",
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"icons": 
 	{ 
 		"48": "icons/logo.png"
@@ -10,7 +10,10 @@
 	
 	"content_scripts":
 	[
-		{ "matches": [ "http://*/*" ], "js": [ "content_script.js" ] }
+		{ 
+			"js": [ "content_script.js" ], 
+			"matches": [ "http://*/*", "https://*/*", "file://*/*" ]
+		}
 	],
 	
 	"page_action":
