--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"version": "0.3",
 	"icons": 
 	{ 
-		"48": "icons/logo.png"
+		"48": "png/logo.png"
 	},
 	
 	"background_page": "background.html",
@@ -11,7 +11,7 @@
 	"content_scripts":
 	[
 		{ 
-			"js": [ "content_script.js" ], 
+			"js": [ "js/content_script.js" ], 
 			"matches": [ "http://*/*", "https://*/*", "file://*/*" ]
 		}
 	],
@@ -22,7 +22,7 @@
 		"type": "tab"
 	},
 	
+	"default_locale": "en_US",
 	"permissions": [ "tabs", "http://www.google.com/reader/*" ],
-	
 	"update_url": "http://chromereader.googlecode.com/svn/update/updates.xml"
 }
