--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Chrome Reader",
-	"version": "0.3",
+	"version": "0.3.1",
 	"icons": 
 	{ 
 		"48": "png/logo.png"
@@ -12,7 +12,7 @@
 	[
 		{ 
 			"js": [ "js/content_script.js" ], 
-			"matches": [ "http://*/*", "https://*/*", "file://*/*" ]
+			"matches": [ "http://*/*", "https://*/*" ]
 		}
 	],
 	
