--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
 	[
 		{ 
 			"js": [ "js/content_script.js" ], 
-			"matches": [ "http://*/*", "https://*/*" ]
+			"matches": [ "http://*/*", "https://*/*" ],
+			"exclude_globs": [ "http://www.google.com/reader/*" ]
 		}
 	],
 	
