--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,11 @@
 		{ 
 			"js": [ "js/content_script.js" ], 
 			"matches": [ "http://*/*", "https://*/*" ],
-			"exclude_globs": [ "http://www.google.com/reader/*" ]
+			"exclude_globs": 
+			[
+				"http://www.google.com/reader/*", 
+				"https://www.google.com/reader/*" 
+			]
 		}
 	],
 	
