--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Chrome Reader",
-	"version": "0.3.5",
+	"version": "0.9",
 	"icons": 
 	{ 
 		"48": "png/logo.png"
@@ -32,5 +32,5 @@
 	
 	"default_locale": "en",
 	"permissions": [ "tabs", "http://www.google.com/reader/*" ],
-	"update_url": "http://chromereader.googlecode.com/svn/update/updates.xml"
+	"update_url": "http://clients2.google.com/service/update2/crx"
 }
