--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Chrome Reader",
-	"version": "0.9",
+	"version": "1.1",
 	"icons": 
 	{ 
 		"48": "png/logo.png"
@@ -31,6 +31,5 @@
 	},
 	
 	"default_locale": "en",
-	"permissions": [ "tabs", "http://www.google.com/reader/*" ],
-	"update_url": "http://clients2.google.com/service/update2/crx"
+	"permissions": [ "tabs", "http://www.google.com/reader/*" ]
 }
